<resources>
    <string name="app_name">觅友</string>

    <string name="action_search">查找</string>
    <string name="action_add">添加</string>

    <string name="menu_group_chat">发起群聊</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_addfriend">添加朋友</string>
    <string name="menu_scan">扫一扫</string>

    <string name="tab_map">组局</string>
    <string name="tab_contact">通讯录</string>
    <string name="tab_information">消息</string>
    <string name="tab_me">我</string>

    <string name="location_start">开始定位</string>
    <string name="radar_start">开启雷达</string>

    <string name="action_settings">Settings</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_email_hint">请再次输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册</string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>

    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">联系人</string>
    <string name="mian_tab_set">设置</string>

    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="agree">接受</string>
    <string name="new_friend">新的朋友</string>

    <string name="add_activity">活动</string>
    <string name="ac_food">餐饮</string>
    <string name="ac_eat_chinese">中餐</string>
    <string name="ac_eat_west">西餐</string>
    <string name="ac_eat_fast">快餐</string>
    <string name="ac_eat_buffet_dinner">自助餐</string>
    <string name="ac_eat_snack">小吃</string>

    <string name="ac_movie">电影</string>
    <string name="ac_gym">棋牌</string>
    <string name="ac_internet">网吧</string>
    <string name="ac_bar">酒吧</string>
    <string name="ac_entertainment">娱乐</string>
    <string name="ac_KTV">KTV</string>

    <string name="ac_tour_sight">图书馆</string>
    <string name="ac_tour_view">减压</string>
    <string name="ac_tour_park">主题公园</string>
    <string name="ac_tour_zoo">动物园</string>
    <string name="ac_tour_amusement">游乐园</string>
    <string name="ac_tour_museum">博物馆</string>

    <string name="ac_play_ball">球类</string>
    <string name="ac_play_basketball">篮球</string>
    <string name="ac_play_football">足球</string>
    <string name="ac_play_badminton">羽毛球</string>
    <string name="ac_play_tableTennis">乒乓球</string>
    <string name="ac_play_volleyball">排球</string>

    <string name="ac_sport_sport">运动</string>
    <string name="ac_sport_climb">爬山</string>
    <string name="ac_sport_swim">游泳</string>
    <string name="ac_sport_run">跑步</string>
    <string name="ac_sport_parkour">跑酷</string>
    <string name="ac_sport_taiJi">太极</string>


    <string name="add_sort">排序方式</string>
    <string name="sort_heat">热度优先</string>
    <string name="sort_distance">距离优先</string>

    <string name="chat">聊天</string>
    <string name="add_friend">添加好友</string>

    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_hobby">个人偏好</string>
    <string name="set_star">个人排名</string>
    <string name="set_voice">留声机</string>
    <string name="set_photo">人脸识别</string>
    <string name="set_map">地图</string>
    <string name="set_person">个人相册</string>
    <string name="set_similar">相似人脸</string>
    <string name="set_blacklist">黑名单</string>
    <!--<string name="set_voice">声音</string>-->
    <string name="set_vibrate">震动</string>
    <string name="logout">退出登陆</string>

    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_info">UserInfoActivity</string>

    <string name="bmob_im_notification_have">有</string>
    <string name="bmob_im_notification_send">发来了</string>
    <string name="bmob_im_notification_msg">条消息</string>
    <string name="bmob_im_notification_contact">个联系人</string>
    <string name="bmob_im_notification_ticker">您有一条新消息</string>

    <string name="hello_world">Hello world!</string>
    <string name="actionbar_activity_not_found">Failed to open intent&#8230;</string>
    <string name="application_title">Wonderful</string>

    <string name="settings_title">应用设置</string>

    <string name="about_title">关于</string>

    <string-array name="navigations">
        <item>设置</item>
        <item>反馈</item>
        <item>推荐</item>
        <item>关于</item>
    </string-array>
    <string-array name="interpolators">
        <item>Accelerate</item>
        <item>Linear</item>
        <item>AccelerateDecelerate</item>
        <item>Decelerate</item>
    </string-array>
</resources>
