<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/theme_bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/include_navi"/>
    
    <RelativeLayout
        android:id="@+id/layout_activtiy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about_top_bg"
        android:minHeight="@dimen/height_40"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            style="@style/style_text_black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_activity" />

    </RelativeLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8"
        android:layout_height="45dp">

        <Button
            android:id="@+id/btn_eat_chinese"
            style="@style/style_text_white"
            android:background="@drawable/selector_click"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/ac_eat_chinese"
            />

        <Button
            android:id="@+id/btn_eat_west"
            style="@style/style_text_white"
            android:background="@drawable/selector_click"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/ac_eat_west"
            />

        <Button
            android:id="@+id/btn_eat_coffee"
            style="@style/style_text_white"
            android:background="@drawable/selector_click"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/ac_eat_buffet_dinner"
            />

        <Button
            android:id="@+id/btn_eat_fast"
            style="@style/style_text_white"
            android:background="@drawable/selector_click"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/ac_eat_fast"
            />

        <Button
            android:id="@+id/btn_snack"
            style="@style/style_text_white"
            android:background="@drawable/selector_click"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/ac_eat_snack" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8"
        android:layout_height="45dp">

        <Button
            android:id="@+id/btn_KTV"
            style="@style/style_text_white"
            android:background="@drawable/selector_click"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/ac_KTV"
            />

        <Button
            android:id="@+id/btn_movie"
            style="@style/style_text_white"
            android:background="@drawable/selector_click"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/ac_movie" />

        <Button
            android:id="@+id/btn_bar"
            style="@style/style_text_white"
            android:background="@drawable/selector_click"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/ac_bar"
            />

        <Button
            android:id="@+id/btn_gym"
            style="@style/style_text_white"
            android:background="@drawable/selector_click"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/ac_gym"
            />

        <Button
            android:id="@+id/btn_internet"
            style="@style/style_text_white"
            android:background="@drawable/selector_click"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/ac_internet" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8"
        android:layout_height="45dp">

        <Button
            android:id="@+id/btn_zoo"
            style="@style/style_text_white"
            android:background="@drawable/selector_click"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/ac_tour_zoo"
            />

        <Button
            android:id="@+id/btn_amusement"
            style="@style/style_text_white"
            android:background="@drawable/selector_click"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/ac_tour_amusement" />

        <Button
            android:id="@+id/btn_park"
            style="@style/style_text_white"
            android:background="@drawable/selector_click"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/ac_tour_park"
            />

        <Button
            android:id="@+id/btn_museum"
            style="@style/style_text_white"
            android:background="@drawable/selector_click"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/ac_tour_museum"
            />

        <Button
            android:id="@+id/btn_sight"
            style="@style/style_text_white"
            android:background="@drawable/selector_click"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/ac_tour_sight" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8"
        android:layout_height="45dp">


        <Button
            android:id="@+id/basketball"
            style="@style/style_text_white"
            android:background="@drawable/selector_click"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/ac_play_basketball"
            />

        <Button
            android:id="@+id/football"
            style="@style/style_text_white"
            android:background="@drawable/selector_click"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/ac_play_football" />

        <Button
            android:id="@+id/badminton"
            style="@style/style_text_white"
            android:background="@drawable/selector_click"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/ac_play_badminton"
            />

        <Button
            android:id="@+id/tableTennis"
            style="@style/style_text_white"
            android:background="@drawable/selector_click"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/ac_play_tableTennis"
            />

        <Button
            android:id="@+id/volleyball"
            style="@style/style_text_white"
            android:background="@drawable/selector_click"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/ac_play_volleyball" />
    </LinearLayout>
   
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about_top_bg"
        android:minHeight="@dimen/height_40"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:hint="没有合适的词？自己说一下吧"
        android:id="@+id/textView" />
    

    <Button
        android:id="@+id/btn_comfirm"
        style="@style/style_text_white"
        android:background="@drawable/selector_click"
        android:layout_width="fill_parent"
        android:layout_height="33dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:text="确认" />

</LinearLayout>

