<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:my_tools="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.lenovo.murphysl.MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        ></android.support.v4.view.ViewPager>

    <LinearLayout
        android:background="@drawable/tab_bg"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <com.example.lenovo.murphysl.ui.ChangeColorIconWithText
            android:id="@+id/id_indicator_one"
            android:layout_width="0dp"
            android:layout_weight="1"
            my_tools:m_color = "@color/green_theme"
            android:padding="5dp"
            my_tools:m_text_size = "12sp"
            my_tools:m_text = "@string/tab_map"
            my_tools:m_icon = "@drawable/ic_menu_allfriends"
            android:layout_height="match_parent" />

        <com.example.lenovo.murphysl.ui.ChangeColorIconWithText
            android:id="@+id/id_indicator_two"
            android:layout_width="0dp"
            android:layout_weight="1"
            my_tools:m_color = "@color/green_theme"
            android:padding="5dp"
            my_tools:m_text_size = "12sp"
            my_tools:m_text = "@string/tab_contact"
            my_tools:m_icon = "@drawable/ic_menu_friendslist"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <com.example.lenovo.murphysl.ui.ChangeColorIconWithText
                android:id="@+id/id_indicator_three"
                android:layout_width="match_parent"
                my_tools:m_color = "@color/green_theme"
                android:padding="5dp"
                my_tools:m_text_size = "12sp"
                my_tools:m_text = "@string/tab_information"
                my_tools:m_icon = "@drawable/ic_menu_start_conversation"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/iv_conversation_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="30dp"
                android:layout_marginTop="7dp"
                android:background="@mipmap/msg_tips"
                android:contentDescription="@string/action_settings"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
            <com.example.lenovo.murphysl.ui.ChangeColorIconWithText
                android:id="@+id/id_indicator_four"
                android:layout_width="match_parent"
                my_tools:m_color = "@color/green_theme"
                android:padding="5dp"
                my_tools:m_text_size = "12sp"
                my_tools:m_text = "@string/tab_me"
                my_tools:m_icon = "@drawable/ic_menu_emoticons"
                android:layout_height="match_parent" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
