<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="@dimen/height_90"
            android:layout_height="@dimen/height_90"
            android:layout_marginBottom="30dp"
            android:background="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/input_bg"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_username"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:drawableLeft="@mipmap/login_icon_account"
                android:drawablePadding="5dp"
                android:hint="@string/login_username_hint"
                android:paddingLeft="15dip"
                android:textColorHint="#ffdddddd" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@mipmap/base_horization_line" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:drawableLeft="@mipmap/login_icon_password"
                android:drawablePadding="5dp"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:paddingLeft="15dip"
                android:textColorHint="#ffdddddd" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:background="@drawable/btn_login_selector"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/base_color_text_white"
            android:textSize="18sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/register_txt2"
        android:textColor="@color/color_theme"
        android:textSize="20sp" />

</RelativeLayout>