<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:orientation="vertical" >

    <include layout="@layout/include_navi" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="400dp">
        <RelativeLayout
            android:id="@+id/layout_info"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:minHeight="50dp"
            android:padding="10dp" >

            <TextView
                style="@style/style_text_black"
                android:padding="7dp"
                android:textSize="15sp"
                android:layout_alignParentLeft="true"
                android:drawableLeft="@drawable/face"
                android:layout_centerVertical="true"
                android:text="@string/set_myinfo" />

            <TextView
                android:id="@+id/tv_set_name"
                style="@style/style_text_black"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:drawablePadding="10dp"
                android:drawableRight="@mipmap/register_bottom_arrow" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_2"
            android:background="@drawable/base_horizontal_line" >
        </View>

        <RelativeLayout
            android:id="@+id/layout_history"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:minHeight="50dp"
            android:padding="10dp" >

            <TextView
                style="@style/style_text_black"
                android:padding="7dp"
                android:textSize="15sp"
                android:layout_alignParentLeft="true"
                android:drawableLeft="@drawable/history"
                android:layout_centerVertical="true"
                android:text="@string/set_history" />

            <TextView
                android:id="@+id/tv_set_history"
                style="@style/style_text_black"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:drawablePadding="10dp"
                android:drawableRight="@mipmap/register_bottom_arrow" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_2"
            android:background="@drawable/base_horizontal_line" >
        </View>


      <!--  <RelativeLayout
            android:id="@+id/layout_person"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:minHeight="50dp"
            android:padding="10dp" >

            <TextView
                style="@style/style_text_black"
                android:padding="7dp"
                android:textSize="15sp"
                android:layout_alignParentLeft="true"
                android:drawableLeft="@drawable/photo"
                android:layout_centerVertical="true"
                android:text="@string/set_person" />

            <TextView
                style="@style/style_text_black"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:drawablePadding="10dp"
                android:drawableRight="@mipmap/register_bottom_arrow" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_2"
            android:background="@drawable/base_horizontal_line" >
        </View>-->

        <RelativeLayout
            android:id="@+id/layout_map"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:minHeight="50dp"
            android:padding="10dp" >

            <TextView
                style="@style/style_text_black"
                android:padding="7dp"
                android:textSize="15sp"
                android:layout_alignParentLeft="true"
                android:drawableLeft="@drawable/map"
                android:layout_centerVertical="true"
                android:text="地图搜索" />

            <TextView
                style="@style/style_text_black"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:drawablePadding="10dp"
                android:drawableRight="@mipmap/register_bottom_arrow" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_2"
            android:background="@drawable/base_horizontal_line" >
        </View>


        <RelativeLayout
            android:id="@+id/layout_star"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:minHeight="50dp"
            android:padding="10dp" >

            <TextView
                style="@style/style_text_black"
                android:drawableLeft="@drawable/rank"
                android:padding="7dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textSize="15sp"
                android:text="@string/set_star" />

            <TextView
                style="@style/style_text_black"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:drawablePadding="10dp"
                android:drawableRight="@mipmap/register_bottom_arrow" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_2"
            android:background="@drawable/base_horizontal_line" >
        </View>

        <!--人脸识别-->
        <RelativeLayout
            android:id="@+id/layout_photo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:minHeight="50dp"
            android:padding="10dp" >

            <TextView
                style="@style/style_text_black"
                android:drawableLeft="@drawable/similar"
                android:padding="7dp"
                android:textSize="15sp"
                android:layout_centerVertical="true"
                android:text="@string/set_photo" />

            <TextView
                style="@style/style_text_black"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:drawablePadding="10dp"
                android:drawableRight="@mipmap/register_bottom_arrow" />
        </RelativeLayout>
    </LinearLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_2"
        android:background="@drawable/base_horizontal_line" >
    </View>



    <Button
        android:id="@+id/btn_logout"
        style="@style/style_button_logout"
        android:layout_width="fill_parent"
        android:layout_marginTop="50dp"
        android:layout_height="45dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/logout" />


</LinearLayout>